# picopod

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml
docs/: conf.py  index.rst  requirements.txt
docs/_static/: custom.css
docs/guide/: basic.rst  formats.rst  index.rst  p8scii.rst  type_safety.rst  userdata.rst
docs/reference/: compression.rst  datatype.rst  errors.rst  index.rst  p8scii.rst  palette.rst  pod.rst  types.rst  unpod.rst  userdata.rst
examples/: decode_image.py  dump.py  encode_image.py
src/picopod/: __init__.py  _io.py  _tokens.py  _utils.py  errors.py  p8scii.py  palette.py  pod.py  types.py  unpod.py  userdata.py
tests/: test_io.py  test_p8scii.py  test_pod.py  test_tokenize.py  test_unpod.py  test_userdata.py
