[project]
name = "picopod"
version = "0.1.0.dev3"
description = "Library for working with Picotron pods and userdata"
authors = [
    { name = "Alyssa Dierking", email = "a@dierking.me" }
]
requires-python = ">=3.12"
dependencies = [
    "lz4>=4.4.4",
]

[dependency-groups]
dev = [
    "coverage>=7.15.0",
    "pillow>=12.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
    "sphinx>=9.1.0",
    "ty>=0.0.59",
]

[tool.mypy]
strict = true

[tool.ruff.lint]
select = [
    "ANN",  # flake8-annotations
    "ARG",  # flake8-unused-arguments
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "D",    # pydocstyle
    "E",    # pycodestyle
    "EM",   # flake8-errmsg
    "F",    # Pyflakes
    "FA",   # flake8-future-annotations
    "FURB", # refurb
    "I",    # isort
    "ICN",  # flake8-import-conventions
    "N",    # pep8-naming
    "PERF", # perflint
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # ruff
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
    "TC",   # flake8-type-checking
    "TRY",  # tryceratops
    "UP",   # pyupgrade
]
ignore = [
    "RET505", # superfluous-else-return
    "S101",   # assert
    "TRY003", # raise-vanilla-args
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"!src/**.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
