[project]
name = "picopod"
version = "0.1.0b4"
dependencies = [
    "lz4>=4.4.4",
]
requires-python = ">=3.12"
authors = [
    { name = "Alyssa Dierking", email = "a@dierking.me" },
]
description = "Library for working with Picotron pods and userdata"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = ["Picotron", "userdata", "pod", "PXU"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Lua",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: File Formats",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/adierking/picopod"
Documentation = "https://picopod.readthedocs.io/"
Repository = "https://github.com/adierking/picopod.git"
Issues = "https://github.com/adierking/picopod/issues"

[dependency-groups]
dev = [
    "coverage>=7.15.0",
    "pillow>=12.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
    "sphinx>=9.1.0",
    "ty>=0.0.59",
]

[tool.mypy]
strict = true

[tool.ruff.lint]
select = [
    "ANN",  # flake8-annotations
    "ARG",  # flake8-unused-arguments
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "D",    # pydocstyle
    "E",    # pycodestyle
    "EM",   # flake8-errmsg
    "F",    # Pyflakes
    "FA",   # flake8-future-annotations
    "FURB", # refurb
    "I",    # isort
    "ICN",  # flake8-import-conventions
    "N",    # pep8-naming
    "PERF", # perflint
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # ruff
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
    "TC",   # flake8-type-checking
    "TRY",  # tryceratops
    "UP",   # pyupgrade
]
ignore = [
    "RET505", # superfluous-else-return
    "S101",   # assert
    "TRY003", # raise-vanilla-args
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"!src/**.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"
